Fixed small errors in Decision Trees and K-Means Clustering notebooks

--- a/Decision_Trees/decision_trees_titanic.html
+++ b/Decision_Trees/decision_trees_titanic.html
@@ -14940,9 +14940,9 @@ Proportion of female passengers who survived: 74.2 %
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><div class="alert alert-block alert-info"><b>Exercise 1:</b><br></p>
-<p>Plot bar charts depicting how <em>Pclass</em> and <em>Embarked</em> (categorical variables) relate to survival, as was done for gender.</p>
+<div class="alert alert-block alert-info"><b>Exercise 1:</b><br> 
 
+Plot bar charts depicting how *Pclass* and *Embarked* (categorical variables) relate to survival, as was done for gender.</div>
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
@@ -14953,9 +14953,9 @@ Proportion of female passengers who survived: 74.2 %
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><div class="alert alert-block alert-info"><b>Exercise 2:</b><br></p>
-<p>Show the correlation between <em>Fare</em> (a continuous variable) and <em>Survival</em> using a histogram plot similar to the one used for <em>Age</em>.</p>
+<div class="alert alert-block alert-info"><b>Exercise 2:</b><br> 
 
+Show the correlation between *Fare* (a continuous variable) and *Survival* using a histogram plot similar to the one used for *Age*. </div>
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
@@ -16277,9 +16277,9 @@ Family
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><div class="alert alert-block alert-info"><b>Exercise 3:</b><br></p>
-<p>Now that you have played with different tree depths it's time to make a plot. Create a list of tree depths and loop over this list to obtain a corresponding accuracy for each depth for both the training and the test datasets. Try running your code for different train/test splits i.e. with different random_state values in the train_test_split() funtion.</p>
+<div class="alert alert-block alert-info"><b>Exercise 3:</b><br>
 
+Now that you have played with different tree depths it's time to make a plot. Create a list of tree depths and loop over this list to obtain a corresponding accuracy for each depth for both the training and the test datasets. Try running your code for different train/test splits i.e. with different random_state values in the train_test_split() funtion.</div>
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
@@ -16334,9 +16334,9 @@ Average performance for a tree depth of 4 is: 80.6 +/- 3.5 %
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><div class="alert alert-block alert-info"><b>Exercise 4:</b><br></p>
-<p>Plot accuracy against tree depth using k-fold cross-validation to replace the simple Hold-out method used in the previous plot.</p>
+<div class="alert alert-block alert-info"><b>Exercise 4:</b><br>
 
+Plot accuracy against tree depth using k-fold cross-validation to replace the simple Hold-out method used in the previous plot.</div>
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
@@ -16472,9 +16472,9 @@ OOB score: 0.8
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><div class="alert alert-block alert-info"><b>Exercise 5:</b><br></p>
-<p>Plot the mean performance of the Random Forest algorithm as a function of tree depth using different numbers of trees. Show that each individual tree can be grown deeper when an ensemble method is used and a greater accuracy achieved overall. Also show on the plot the results from cross-validation using a single decision tree for comparison. (Note that you should not set n_estimators=1 in the Random Forest algorithm to represent a single decision tree unless max_features is set equal to the total number of features in the dataframe and bootStrap=False).</p>
+<div class="alert alert-block alert-info"><b>Exercise 5:</b><br>
 
+Plot the mean performance of the Random Forest algorithm as a function of tree depth using different numbers of trees. Show that each individual tree can be grown deeper when an ensemble method is used and a greater accuracy achieved overall. Also show on the plot the results from cross-validation using a single decision tree for comparison. (Note that you should not set n_estimators=1 in the Random Forest algorithm to represent a single decision tree unless max_features is set equal to the total number of features in the dataframe and bootStrap=False).</div>
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
