--- a/K-Means_Clustering/kmeans_clustering_netflix_movies.html
+++ b/K-Means_Clustering/kmeans_clustering_netflix_movies.html
@@ -14850,9 +14850,9 @@ The genres are: [&#39;Adventure&#39;, &#39;Animation&#39;, &#39;Children&#39;, &
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><div class="alert alert-block alert-info"><b>Exercise 1:</b><br></p>
-<p>Plot a bar chart to show how often each genre appears in the movies dataset.</p>
+<div class="alert alert-block alert-info"><b>Exercise 1:</b><br> 
 
+Plot a bar chart to show how often each genre appears in the movies dataset.</div>
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
@@ -15676,9 +15676,9 @@ Mean user average rating for sci-fi movies: 3.5
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p><div class="alert alert-block alert-info"><b>Exercise 2:</b><br></p>
-<p>Make a 3D plot showing k clusters using the genres "Romance", "Sci-Fi" and "Action".</p>
+<div class="alert alert-block alert-info"><b>Exercise 2:</b><br> 
 
+Make a 3D plot showing k clusters using the genres "Romance", "Sci-Fi" and "Action".</div>
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
